Fix project sizes on mobile

--- a/app/css/_project.scss
+++ b/app/css/_project.scss
@@ -10,15 +10,33 @@
   }
 
   &__block {
-    width: 66.6%;
+    @media screen and (min-width: 801px) {
+      width: 66.6%;
+    }
+    @media screen and (max-width: 800px) {
+      width: 100%;
+    }
   }
 
   &__block,
   &__image {
-    margin-bottom: 65px;
+    @media screen and (min-width: 801px) {
+      margin-bottom: 65px;
+    }
+    @media screen and (max-width: 800px) {
+      margin-bottom: 30px;
+    }
   }
 
   &__headline {
     margin-bottom: 5px;
+  }
+
+  &__subheading {
+    font-size: 24px;
+  }
+
+  &__text {
+    font-size: 18px;
   }
 }
